require-non-root/explicit-root-uid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root-uid-pod
spec:
  containers:
    - name: nginx
      image: nginx
      command: ["sleep", "9999"]
      securityContext:
        runAsUser: 0
