require-non-root/root-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root-pod
spec:
  containers:
    - name: nginx
      image: nginx
      command: ["sleep", "9999"]
      securityContext:
        runAsNonRoot: false
